tests/semantic_errors/files/proj_7_struct_invalid_access_no_member.c
struct Point {
    int x;
    int y;
};

int main() {
    struct Point p;
    p.x = 5;
    p.y = 10;
    p.z = 15;

    return 0;
}
